--- a/Mohammad-CV.html
+++ b/Mohammad-CV.html
@@ -60,6 +60,13 @@
         <li><a href="#" class="cert-link" data-cert="cert1.jpg">Certification 1</a></li>
         <li><a href="#" class="cert-link" data-cert="cert2.jpg">Certification 2</a></li>
         <li><a href="#" class="cert-link" data-cert="cert3.jpg">Certification 3</a></li>
+        <li><a href="#" class="cert-link" data-cert="cert4.jpg">Certification 4</a></li>
+        <li><a href="#" class="cert-link" data-cert="cert5.jpg">Certification 5</a></li>
+        <li><a href="#" class="cert-link" data-cert="cert6.jpg">Certification 6</a></li>
+        <li><a href="#" class="cert-link" data-cert="cert7.jpg">Certification 7</a></li>
+        <li><a href="#" class="cert-link" data-cert="cert8.jpg">Certification 8</a></li>
+        <li><a href="#" class="cert-link" data-cert="cert9.jpg">Certification 9</a></li>
+        <li><a href="#" class="cert-link" data-cert="cert10.jpg">Certification 10</a></li>
     </ul>
 
     <!-- Modal structure -->
