--- a/Mohammad-CV.html
+++ b/Mohammad-CV.html
@@ -57,7 +57,7 @@
     <h2>Certifications</h2>
     <p>Click on a certification field to view the certificates:</p>
     <ul class="cert-list">
-        <li><a href="#" class="cert-link" data-cert-images="cert1.jpg,cert2.jpg,cert3.jpg,cert4.jpg,cert5.jpg,cert6.jpg,cert7.jpg,cert8.jpg,cert9.jpg">Project Manegment</a></li>
+        <li><a href="#" class="cert-link" data-cert-images="cert1.jpg,cert2.jpg,cert3.jpg,cert4.jpg,cert5.jpg,cert6.jpg,cert7.jpg,cert8.jpg,cert9.jpg">Certification 1</a></li>
         <li><a href="#" class="cert-link" data-cert-images="cert4.jpg,cert5.jpg">Certification 2</a></li>
         <li><a href="#" class="cert-link" data-cert-images="cert6.jpg,cert7.jpg,cert8.jpg,cert9.jpg">Certification 3</a></li>
     </ul>
