--- a/Mohammad-CV.html
+++ b/Mohammad-CV.html
@@ -57,28 +57,20 @@
     <h2>Certifications</h2>
     <p>Click on a certification field to view the certificates:</p>
     <ul class="cert-list">
-        <li><a href="#" class="cert-link" data-cert-images="cert1.jpg,cert2.jpg,cert3.jpg,cert4.jpg,cert5.jpg,cert6.jpg,cert7.jpg,cert8.jpg,cert9.jpg">Certification 1</a></li>
-        <li><a href="#" class="cert-link" data-cert-images="cert4.jpg,cert5.jpg">Certification 2</a></li>
-        <li><a href="#" class="cert-link" data-cert-images="cert6.jpg,cert7.jpg,cert8.jpg,cert9.jpg">Certification 3</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="cert1.pdf,cert2.pdf">Certification 1</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="cert3.pdf,cert4.pdf">Certification 2</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="cert5.pdf">Certification 3</a></li>
     </ul>
 
-    <!-- Modal structure -->
+    <!-- Modal for PDFs -->
     <div id="cert-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <div id="cert-images-container" class="cert-images-container"></div>
+            <div id="cert-pdf-container" class="cert-pdf-container"></div>
         </div>
     </div>
 </section>
 
-    <!-- Modal structure -->
-    <div id="cert-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <img id="cert-img" src="" alt="Certificate">
-        </div>
-    </div>
-</section>
 
 
     <section id="contact">
