--- a/Mohammad-CV.html
+++ b/Mohammad-CV.html
@@ -57,9 +57,24 @@
     <h2>Certifications</h2>
     <p>Click on a certification field to view the certificates:</p>
     <ul class="cert-list">
-        <li><a href="#" class="cert-link" data-cert-pdfs="cert1.pdf,cert2.pdf">Certification 1</a></li>
-        <li><a href="#" class="cert-link" data-cert-pdfs="cert3.pdf,cert4.pdf">Certification 2</a></li>
-        <li><a href="#" class="cert-link" data-cert-pdfs="cert5.pdf">Certification 3</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="
+            Project Management Institute/Ethics.pdf, 
+            Project Management Institute/Stakeholders.pdf,
+            Project Management Institute/Budgets.pdf,
+            Project Management Institute/Collaborating with Microsoft 365.pdf,
+            Project Management Institute/Risk.pdf,
+            Project Management Institute/Requirements.pdf,
+            Project Management Institute/Schedules.pdf,
+            Project Management Institute/Teams.pdf,
+            Project Management Institute/Projects with Microsoft 365.pdf
+            ">Project Management Institute</a></li>
+
+        <li><a href="#" class="cert-link" data-cert-pdfs="Project Management by Microsoft and LinkedIn/Completion_Career Essentials in Project Management by Microsoft and LinkedIn.pdf">Project Management by Microsoft and LinkedIn</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="cert5.pdf">Logistics</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="Digital Marketing/Canva.pdf, Digital Marketing/Digital Marketing.pdf,Digital Marketing/MarketingSolutionFundamentals.pdf">Digital Marketing</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="Digital Store Management/Digital Store Management.pdf">Digital Store Management</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="Programming/Programming English.pdf,Programming/Programming Arabic.pdf">Programming</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="cert5.pdf">IT Strategy</a></li>
     </ul>
 
     <!-- Modal for PDFs -->
