--- a/Mohammad-CV.html
+++ b/Mohammad-CV.html
@@ -74,7 +74,7 @@
         <li><a href="#" class="cert-link" data-cert-pdfs="Digital Marketing/Canva.pdf, Digital Marketing/Digital Marketing.pdf,Digital Marketing/MarketingSolutionFundamentals.pdf">Digital Marketing</a></li>
         <li><a href="#" class="cert-link" data-cert-pdfs="Digital Store Management/Digital Store Management.pdf">Digital Store Management</a></li>
         <li><a href="#" class="cert-link" data-cert-pdfs="Programming/Programming English.pdf,Programming/Programming Arabic.pdf">Programming</a></li>
-        <li><a href="#" class="cert-link" data-cert-pdfs="CISCO Certificate Cybersecurity.pdf,Ethical Hacking Workshop.pdf,NDG Certificate Linux Unhatc.pdf">Information Technology Strategy</a></li>
+        <li><a href="#" class="cert-link" data-cert-pdfs="Information Technology Strategy/CISCO Certificate Cybersecurity.pdf,Information Technology Strategy/Ethical Hacking Workshop.pdf,Information Technology Strategy/NDG Certificate Linux Unhatc.pdf">Information Technology Strategy</a></li>
         <li><a href="#" class="cert-link" data-cert-pdfs="Information Technology Leadership/CertificateOfCompletion_ServiceNow IT Leadership Professional Certificate.pdf">Information Technology Leadership</a></li>
     </ul>
 
