--- a/Mohammad-CV.html
+++ b/Mohammad-CV.html
@@ -41,9 +41,10 @@
 
         <section id="about" class="section">
             <h2>About Me</h2>
-            <p>As a Visual and Merch Flow Supervisor, I bring a unique combination of creativity and technical expertise to enhance the in-store customer experience. I oversee the visual presentation of products, ensuring that displays are both aesthetically pleasing and strategically placed to drive sales. My role requires a keen eye for detail, an understanding of consumer behavior, and the ability to implement merchandising strategies that align with brand goals.</p>
-            <p>Before transitioning into this role, I worked in the IT department, where I developed a strong foundation in technology and problem-solving. With a degree in Computer Science, I have the technical skills to analyze data, troubleshoot issues, and implement solutions that improve operational efficiency. This background has allowed me to approach my current position with a systems-oriented mindset, blending both creativity and functionality.</p>
-            <p>In my current role, I continue to leverage my IT experience to streamline processes, manage digital tools, and ensure that merchandising strategies are executed smoothly. My ability to blend technical knowledge with visual merchandising helps me create impactful, organized, and efficient in-store displays that engage customers and enhance their shopping experience.</p>
+            <p>I am a retail professional with a strong background in visual merchandising, inventory flow, and a growing expertise in merchandising strategy. Currently working as an Assistant Merchandiser, I support market-wide planning, stock management, and product performance analysis, ensuring alignment between brand direction and in-store execution.</p>
+            <p>Previously, as a Visual and Merch Flow Supervisor, I specialized in enhancing the customer journey through impactful product presentation and strategic visual displays. My approach combines creativity with operational efficiency, ensuring that merchandising efforts not only attract attention but also drive sales and reflect brand identity.</p>
+            <p>My career began in the IT field, where I developed a solid foundation in technical problem-solving, systems thinking, and data analysis. With studies in Computer Science and practical experience in IT support, I bring a unique, dual-focused perspective to retail—one that blends technology with visual execution.</p>
+            <p>By leveraging both creative and technical strengths, I focus on building efficient merchandising solutions, optimizing stock flow, and delivering visually compelling customer experiences. I am passionate about continuous improvement and thrive in dynamic retail environments where adaptability, collaboration, and precision are key.</p>
         </section>
 
         <section id="cv" class="section">
@@ -51,7 +52,7 @@
             <div class="cv-content">
                 <h3>Experience</h3>
                 <ul>
-                    <li><strong>Visual and Merch Flow Supervisor</strong> at Alshaya Group UAE Based - 2017 to Present</li>
+                    <li><strong>Assistant Merchandiser</strong> at Alshaya Group UAE Based - 2017 to Present</li>
                 </ul>
                 <h3>Education</h3>
                 <ul>
