--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="Mohammad-Al-Labban.html">Home</a></li>
         <li><a href="About.html">About Me</a></li>
         <li><a href="CV.html">CV</a></li>
         <li><a href="Certificates.html">Certifications</a></li>
