--- a/Certificates.html
+++ b/Certificates.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="Mohammad-Al-Labban.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
         <li><a href="cv.html">CV</a></li>
         <li><a href="Certificates.html">Certifications</a></li>
