--- a/Mohammad-Al-Labban.html
+++ b/Mohammad-Al-Labban.html
@@ -17,10 +17,10 @@
     <nav>
       <ul>
         <li><a href="Mohammad-Al-Labban.html">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li><a href="cv.html">CV</a></li>
+        <li><a href="About.html">About Me</a></li>
+        <li><a href="CV.html">CV</a></li>
         <li><a href="Certificates.html">Certifications</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
     <button id="theme-toggle" class="btn">🌙 Dark Mode</button>
@@ -44,3 +44,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
