--- a/Mohammad-Al-Labban.html
+++ b/Mohammad-Al-Labban.html
@@ -34,8 +34,8 @@
         <p>I specialize in visual merchandising, inventory flow, and digital retail strategy. Explore my portfolio to see my CV, certifications, and professional documents.</p>
         
         <div class="cta-buttons">
-          <a href="cv.html" class="btn">📄 View My CV</a>
-          <a href="contact.html" class="btn">📨 Get in Touch</a>
+          <a href="CV.html" class="btn">📄 View My CV</a>
+          <a href="Contact.html" class="btn">📨 Get in Touch</a>
         </div>
       </div>
     </section>
@@ -44,4 +44,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
