--- a/Mohammad-Al-Labban.html
+++ b/Mohammad-Al-Labban.html
@@ -6,44 +6,46 @@
   <title>Home | Mohammad Al Labban</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-
-<button class="menu-toggle">☰</button>
-
-<aside class="sidebar">
-  <div class="profile">
-    <img src="your-picture.jpg" alt="Mohammad Al Labban" class="profile-picture">
-    <h1>Mohammad Al Labban</h1>
-    <p class="tagline">Retail Merchandising Specialist | Digital Strategy | Inventory Optimization</p>
-  </div>
-
-  <nav>
-    <ul>
-      <li><a href="Mohammad-Al-Labban.html">Home</a></li>
-      <li><a href="About.html">About Me</a></li>
-      <li><a href="CV.html">CV</a></li>
-      <li><a href="Certificates.html">Certifications</a></li>
-      <li><a href="Contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
-  <button id="theme-toggle" class="btn">🌙 Dark Mode</button>
-</aside>
-
-<main class="main-content">
-  <section class="hero section">
-    <div class="intro">
-      <h1>Hello, I'm <span>Mohammad Al Labban</span></h1>
-      <p>I specialize in visual merchandising, inventory flow, and digital retail strategy. Explore my portfolio to see my CV, certifications, and professional documents.</p>
-
-      <div class="cta-buttons">
-        <a href="CV.html" class="btn">📄 View My CV</a>
-        <a href="Contact.html" class="btn">📨 Get in Touch</a>
-      </div>
+  
+  <!-- Sidebar -->
+  <aside class="sidebar">
+    <div class="profile">
+      <img src="your-picture.jpg" alt="Mohammad Al Labban" class="profile-picture">
+      <h1>Mohammad Al Labban</h1>
+      <p class="tagline">Retail Merchandising Specialist | Digital Strategy | Inventory Optimization</p>
     </div>
-  </section>
-</main>
+    <nav>
+      <ul>
+        <li><a href="Mohammad-Al-Labban.html">Home</a></li>
+        <li><a href="About.html">About Me</a></li>
+        <li><a href="CV.html">CV</a></li>
+        <li><a href="Certificates.html">Certifications</a></li>
+        <li><a href="Contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <button id="theme-toggle" class="btn">🌙 Dark Mode</button>
+  </aside>
+<button class="menu-toggle">☰</button>
+  <!-- Main Content -->
+  <main class="main-content">
+    <section class="hero section">
+      <div class="intro">
+        <h1>Hello, I'm <span>Mohammad Al Labban</span></h1>
+        <p>I specialize in visual merchandising, inventory flow, and digital retail strategy. Explore my portfolio to see my CV, certifications, and professional documents.</p>
+        
+        <div class="cta-buttons">
+          <li><a href="cv.html" class="btn">📄 View My CV</a></li>
+          <h1>
 
-<script src="script.js"></script>
+          </h1>
+          <li><a href="contact.html" class="btn">📨 Get in Touch</a></li>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
