--- a/Mohammad-Al-Labban.html
+++ b/Mohammad-Al-Labban.html
@@ -36,11 +36,11 @@
         <p>I specialize in visual merchandising, inventory flow, and digital retail strategy. Explore my portfolio to see my CV, certifications, and professional documents.</p>
         
         <div class="cta-buttons">
-          <li><a href="cv.html" class="btn">📄 View My CV</a></li>
+          <li><a href="CV.html" class="btn">📄 View My CV</a></li>
           <h1>
 
           </h1>
-          <li><a href="contact.html" class="btn">📨 Get in Touch</a></li>
+          <li><a href="Contact.html" class="btn">📨 Get in Touch</a></li>
         </div>
       </div>
     </section>
